RewardsPackage/force-app/main/default/objects/Rewards_Event__c/fields/Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Contact_Name__c</fullName>
    <formula>Rewards_Account__r.Contact__r.FirstName + &apos; &apos; + Rewards_Account__r.Contact__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Name</label>
    <type>Text</type>
</CustomField>