RewardsPackage/force-app/main/default/objects/Rewards_Event__c/fields/Date__c.field-meta.xml
<CustomField>
    <fullName>Date__c</fullName>
    <description>Date and time of the Rewards Event. May be different than Created Date.</description>
    <label>Date</label>
    <type>DateTime</type>
</CustomField>