RewardsPackage/force-app/main/default/objects/Rewards_Event__c/fields/Points_Balance__c.field-meta.xml
<CustomField>
    <fullName>Points_Balance__c</fullName>
    <description>Contact&apos;s total points at the time of this rewards event</description>
    <inlineHelpText>Contact&apos;s total points at the time of this rewards event</inlineHelpText>
    <label>Points Balance</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>