RewardsPackage/force-app/main/default/objects/Rewards_Event__c/fields/Points_Expired__c.field-meta.xml
<CustomField>
    <fullName>Points_Expired__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Amount of points that were unused at the time of expiration</description>
    <inlineHelpText>Amount of points that were unused at the time of expiration</inlineHelpText>
    <label>Points Expired</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>