RewardsPackage/force-app/main/default/objects/Rewards_Event__c/fields/Points_Remaining__c.field-meta.xml
<CustomField>
    <fullName>Points_Remaining__c</fullName>
    <description>Points minus points used and expired</description>
    <formula>Points__c - ( Points_Used__c + Points_Expired__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Points minus points used and expired</inlineHelpText>
    <label>Points Remaining</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>