RewardsPackage/force-app/main/default/objects/Rewards_Event__c/fields/Points_Used__c.field-meta.xml
<CustomField>
    <fullName>Points_Used__c</fullName>
    <defaultValue>0</defaultValue>
    <description>The amount of points taken from this Award Event and applied to related Deduction Events</description>
    <inlineHelpText>The amount of points taken from this Award Event and applied to related Deduction Events</inlineHelpText>
    <label>Points Used</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>