RewardsPackage/force-app/main/default/objects/Rewards_Event__c/fields/Related_Entity_ID__c.field-meta.xml
<CustomField>
    <fullName>Related_Entity_ID__c</fullName>
    <description>For award Rewards Events, the ID of the record that inspired this event; for redemptions, the ID of the redeemed Reward.</description>
    <inlineHelpText>For award Rewards Events, the ID of the record that inspired this event; for redemptions, the ID of the redeemed Reward.</inlineHelpText>
    <label>Related Entity ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>