RewardsPackage/force-app/main/default/objects/Rewards_Event__c/fields/Reward__c.field-meta.xml
<CustomField>
    <fullName>Reward__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Reward</label>
    <referenceTo>Reward__c</referenceTo>
    <relationshipLabel>Rewards Events</relationshipLabel>
    <relationshipName>Rewards_Events</relationshipName>
    <type>Lookup</type>
</CustomField>