RewardsPackage/force-app/main/default/objects/Rewards_Event__c/fields/Rewards_Account_Expired__c.field-meta.xml
<CustomField>
    <fullName>Rewards_Account_Expired__c</fullName>
    <formula>Rewards_Account__r.End_Datetime__c &lt; NOW()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Rewards Account Expired</label>
    <type>Checkbox</type>
</CustomField>