RewardsPackage/force-app/main/default/objects/Rewards_Event__c/fields/Rewards_Program_Name__c.field-meta.xml
<CustomField>
    <fullName>Rewards_Program_Name__c</fullName>
    <label>Rewards Program Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>