RewardsPackage/force-app/main/default/objects/Rewards_Event__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>For redemptions, indicates whether or not the request has been fulfilled. For awards, indicates whether there are points remaining.</description>
    <inlineHelpText>For redemptions, indicates whether or not the request has been fulfilled. For awards, indicates whether there are points remaining.</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Fulfilled</fullName>
            </value>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Expired</fullName>
            </value>
            <value>
                <fullName>Canceled</fullName>
            </value>
            <value>
                <fullName>Applied</fullName>
            </value>
            <value>
                <fullName>Used</fullName>
            </value>
            <value>
                <fullName>Inactive</fullName>
            </value>
            <value>
                <fullName>Empty</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>