RewardsPackage/force-app/main/default/objects/Rewards_Event__c/recordTypes/Award.recordType-meta.xml
<RecordType>
    <fullName>Award</fullName>
    <active>true</active>
    <description>Points awarded</description>
    <label>Award</label>
</RecordType>