RewardsPackage/force-app/main/default/objects/Rewards_Event__c/recordTypes/Expiration.recordType-meta.xml
<RecordType>
    <fullName>Expiration</fullName>
    <active>true</active>
    <description>Expiration of an Award Rewards Event</description>
    <label>Expiration</label>
</RecordType>