RewardsPackage/force-app/main/default/objects/Rewards_Event__c/recordTypes/Redemption.recordType-meta.xml
<RecordType>
    <fullName>Redemption</fullName>
    <active>true</active>
    <description>Reward redeemed for points</description>
    <label>Redemption</label>
</RecordType>