RewardsPackage/force-app/main/default/objects/Rewards_Event__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Rewards_Account__c</columns>
    <columns>Rewards_Program_Name__c</columns>
    <columns>Contact_Name__c</columns>
    <columns>Date__c</columns>
    <columns>Description__c</columns>
    <columns>Points__c</columns>
    <columns>Points_Used__c</columns>
    <columns>Points_Remaining__c</columns>
    <columns>Type__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>